# auroracoin-new

./: .appveyor.yml  .gitignore  .travis.yml  INSTALL.md  Makefile.am  configure.ac  libauroracoinconsensus.pc.in
.travis/: lint_04_install.sh  lint_06_script.sh  test_05_before_script.sh  test_06_script.sh
build-aux/m4/: auroracoin_find_bdb53.m4  auroracoin_qt.m4
contrib/: gitian-build.py
contrib/debian/: copyright
contrib/devtools/: symbol-check.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/seeds/: nodes_main.txt
contrib/testgen/: README.md  gen_key_io_test_vectors.py
contrib/verify-commits/: verify-commits.py
depends/: README.md
doc/: README.md  build-osx.md  build-unix.md  dependencies.md  developer-notes.md  release-notes-14023.md  release-notes.md  tor.md  zmq.md
doc/man/: Makefile.am
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  amount.h  auroracoin-cli-res.rc  auroracoin-cli.cpp  auroracoin-tx-res.tc  auroracoin-tx.cpp  auroracoind-res.rc  auroracoind.cpp  base58.h  blockencodings.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  core_io.h  core_read.cpp  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dummywallet.cpp  fs.h  httprpc.cpp  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  (+61 more)
src/bench/: bench_auroracoin.cpp  block_assemble.cpp  ccoins_caching.cpp  checkblock.cpp  crypto_hash.cpp  mempool_eviction.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h  params.h  tx_verify.cpp  validation.h
src/crypto/: common.h
src/index/: base.cpp  txindex.cpp
src/interfaces/: handler.cpp  node.cpp  wallet.cpp  wallet.h
src/policy/: fees.h  policy.cpp
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  auroracoin.cpp  auroracoin.qrc  auroracoinaddressvalidator.cpp  auroracoinaddressvalidator.h  auroracoinamountfield.cpp  auroracoinamountfield.h  auroracoingui.cpp  auroracoingui.h  auroracoinunits.cpp  auroracoinunits.h  clientmodel.cpp  coincontroldialog.cpp  coincontroldialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  modaloverlay.cpp  networkstyle.cpp  networkstyle.h  notificator.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequestplus.cpp  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  platformstyle.cpp  qvalidatedlineedit.cpp  qvalidatedlineedit.h  (+31 more)
src/qt/forms/: receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui
src/qt/res/css/: auroracoin.css
src/qt/test/: addressbooktests.cpp  addressbooktests.h  paymentservertests.cpp  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  rawtransaction.cpp  server.cpp  server.h
src/script/: auroracoinconsensus.cpp  auroracoinconsensus.h  descriptor.cpp  descriptor.h  ismine.cpp  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/support/: lockedpool.cpp
src/test/: addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  auroracoin-util-test.py  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_properties.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  (+31 more)
src/test/data/: blockfilters.json
src/univalue/include/: univalue.h
src/wallet/: coinselection.cpp  coinselection.h  crypter.cpp  db.cpp  db.h  feebumper.cpp  init.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: coinselector_tests.cpp  init_test_fixture.h  init_tests.cpp  psbt_wallet_tests.cpp  wallet_crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqconfig.h  zmqnotificationinterface.cpp
test/: config.ini.in
test/functional/: combine_logs.py  example_test.py  feature_block.py  feature_blocksdir.py  feature_cltv.py  feature_csv_activation.py  feature_dersig.py  feature_fee_estimation.py  feature_rbf.py  interface_zmq.py  mining_basic.py  mining_getblocktemplate_longpoll.py  mining_prioritisetransaction.py  p2p_compactblocks.py  p2p_invalid_block.py  p2p_invalid_tx.py  p2p_node_network_limited.py  p2p_segwit.py  p2p_sendheaders.py  rpc_blockchain.py  rpc_deprecated.py  rpc_fundrawtransaction.py  rpc_help.py  rpc_net.py  rpc_psbt.py  rpc_rawtransaction.py  rpc_signrawtransaction.py  rpc_txoutproof.py  test_runner.py  wallet_address_types.py  wallet_basic.py  wallet_bumpfee.py  wallet_dump.py  wallet_encryption.py  wallet_import_rescan.py  wallet_importmulti.py  wallet_keypool.py  wallet_labels.py  wallet_listsinceblock.py  wallet_multiwallet.py
test/functional/test_framework/: authproxy.py  blocktools.py  messages.py  mininode.py  netutil.py  test_framework.py  test_node.py
test/lint/: check-doc.py  check-rpc-mappings.py  lint-assertions.sh  lint-circular-dependencies.sh  lint-format-strings.py  lint-format-strings.sh  lint-includes.sh  lint-locale-dependence.sh  lint-python.sh  lint-shell.sh  lint-spelling.ignore-words.txt  lint-spelling.sh
test/util/: auroracoin-util-test.py
(+1 files in other folders)
